Material preview do not update #35495

Closed
opened 2013-05-24 12:26:47 +02:00 by Denis Belov · 5 comments

%%%--- Operating System, Graphics card ---
wix7 x64, gtx580

- Blender version with error, and version that worked ---

r56992

- Short description of error ---

Material preview do not automaticaly update if node editor is open (you have to double click on material to update preview)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create two objects with diferent materials (or one with multiple materials), split window open node editor -> material preview do not update when select object (or different material),
close node editor -> material preview autoupdate%%%

%%%--- Operating System, Graphics card --- wix7 x64, gtx580 - Blender version with error, and version that worked --- r56992 - Short description of error --- Material preview do not automaticaly update if node editor is open (you have to double click on material to update preview) - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create two objects with diferent materials (or one with multiple materials), split window open node editor -> material preview do not update when select object (or different material), close node editor -> material preview autoupdate%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Assigning to Lukas.

Lukas, select the red cube and then the green cube, everything updates except the Material Preview.
Now if I enable Pinning in the Node editor and then do the selection, the material preview updates correctly. Maybe related?%%%

%%%Assigning to Lukas. Lukas, select the red cube and then the green cube, everything updates except the Material Preview. Now if I enable Pinning in the Node editor and then do the selection, the material preview updates correctly. Maybe related?%%%
Member

%%%In Blender Internal, the 'active node' is being handled to find out which buttons to show in properties and probably also for the preview render.
For cycles this might go via different routes. Might be easier for brecht to check?%%%

%%%In Blender Internal, the 'active node' is being handled to find out which buttons to show in properties and probably also for the preview render. For cycles this might go via different routes. Might be easier for brecht to check?%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35495
No description provided.