Fix for #35495, Material preview do not update. This was caused by a line inserted by pynodes merge that would cancel all running preview jobs on each node area refresh. Not sure what the rationale for this behavior was, but it certainly doesn't work correctly.